- refactored data io - added GARCH simulation - added notebook that demonstrates the end to end process

--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -17,42 +17,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 134,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-20T00:54:37.779920Z",
-     "start_time": "2020-11-20T00:54:37.740258Z"
+     "end_time": "2020-11-21T01:54:00.349909Z",
+     "start_time": "2020-11-21T01:53:59.738705Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'convert_multiple_price_histories_from_nested_lists_to_dict_of_dataframes' from 'ovm.utils' (/Volumes/GIT/PycharmProjects/overlay-monetary/ovm/utils.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-99-861b8d51226c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m from ovm.utils import (\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mfetch_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mconvert_multiple_price_histories_from_nested_lists_to_dict_of_dataframes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mconvert_price_history_from_nested_list_to_dataframe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcompute_number_of_days_in_price_history\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'convert_multiple_price_histories_from_nested_lists_to_dict_of_dataframes' from 'ovm.utils' (/Volumes/GIT/PycharmProjects/overlay-monetary/ovm/utils.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ovm.utils import (\n",
-    "    fetch_data, \n",
-    "    convert_multiple_price_histories_from_nested_lists_to_dict_of_dataframes, \n",
-    "    convert_price_history_from_nested_list_to_dataframe, \n",
+    "    TimeResolution, \n",
+    "    fetch_data\n",
+    ")\n",
+    "\n",
+    "from ovm.historical_data_io import (\n",
+    "    convert_multiple_raw_price_histories_from_nested_lists_to_dict_of_dataframes, \n",
+    "    convert_raw_price_history_from_nested_list_to_dataframe, \n",
     "    compute_number_of_days_in_price_history, \n",
-    "    save_price_histories\n",
+    "    save_price_histories    \n",
     ")\n",
     "\n",
     "from datetime import datetime\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import pyarrow\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "import typing as tp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_resolution = TimeResolution.FIFTEEN_SECONDS\n",
+    "directory_path = time_resolution.value"
    ]
   },
   {
@@ -90,59 +93,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-19T23:36:13.607474Z",
-     "start_time": "2020-11-19T23:36:13.603171Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# def adf_test(timeseries):\n",
-    "#     print ('Results of Dickey-Fuller Test:')\n",
-    "#     dftest = adfuller(timeseries, autolag='AIC')\n",
-    "#     dfoutput = pd.Series(dftest[0:4], index=['Test Statistic','p-value','#Lags Used','Number of Observations Used'])\n",
-    "#     for key,value in dftest[4].items():\n",
-    "#        dfoutput['Critical Value (%s)'%key] = value\n",
-    "#     print (dfoutput)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-20T00:38:01.951731Z",
-     "start_time": "2020-11-20T00:38:01.947915Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# PriceHistory = tp.Sequence[tp.Tuple[int, float, float, float, float, float]]\n",
-    "\n",
-    "\n",
-    "# def convert_price_history_from_nested_list_to_dataframe(\n",
-    "#     price_history: PriceHistory, \n",
-    "#     set_time_index: bool = True) -> pd.DataFrame:\n",
-    "#     df = pd.DataFrame(data=price_history, columns=ftx_column_names)\n",
-    "#     if set_time_index:\n",
-    "#         df.set_index('start_time', inplace=True)\n",
-    "        \n",
-    "#     return df\n",
-    "\n",
-    "\n",
-    "# def convert_multiple_price_histories_from_nested_lists_to_dict_of_dataframes(\n",
-    "#     name_to_price_history_map: tp.Dict[str, PriceHistory], \n",
-    "#     set_time_index: bool = True) -> tp.Dict[str, pd.DataFrame]:\n",
-    "#     return {name: convert_price_history_from_nested_list_to_dataframe(price_history=price_history, \n",
-    "#                                                                       set_time_index=set_time_index) \n",
-    "#             for name, price_history \n",
-    "#             in name_to_price_history_map.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 78,
    "metadata": {
     "ExecuteTime": {
@@ -153,16 +103,30 @@
    "outputs": [],
    "source": [
     "name_to_price_history_dfs = \\\n",
-    "    convert_multiple_price_histories_from_nested_lists_to_dict_of_dataframes(data)"
+    "    convert_multiple_raw_price_histories_from_nested_lists_to_dict_of_dataframes(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-20T00:39:36.637783Z",
-     "start_time": "2020-11-20T00:39:36.634851Z"
+     "end_time": "2020-11-20T21:43:59.857575Z",
+     "start_time": "2020-11-20T21:43:59.491278Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = name_to_price_history_dfs['ETH/USD']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-11-20T21:44:04.274595Z",
+     "start_time": "2020-11-20T21:44:04.225612Z"
     }
    },
    "outputs": [
@@ -172,59 +136,13 @@
        "2485981"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(name_to_price_history_dfs['ETH/USD'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-20T00:40:31.410688Z",
-     "start_time": "2020-11-20T00:40:31.407930Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ETH-USD'"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 'ETH/USD'.replace('/', '-')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-11-20T00:44:12.244549Z",
-     "start_time": "2020-11-20T00:44:12.242145Z"
-    },
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# def save_price_history_df(name: str, price_history_df: pd.DataFrame):\n",
-    "#     price_history_df.to_parquet(name.replace('/', '-'))\n",
-    "\n",
-    "\n",
-    "# def save_price_histories(name_to_price_history_df_map: tp.Dict[str, pd.DataFrame]):\n",
-    "#     for name, price_history_df in name_to_price_history_df_map.items():\n",
-    "#         save_price_history_df(name=name, price_history_df=price_history_df)"
+    "len(df)"
    ]
   },
   {
@@ -252,7 +170,7 @@
    },
    "outputs": [],
    "source": [
-    "df = convert_price_history_from_nested_list_to_dataframe(eth_data['ETH/USD'])"
+    "# df = convert_raw_price_history_from_nested_list_to_dataframe(eth_data['ETH/USD'])"
    ]
   },
   {
@@ -497,7 +415,7 @@
     }
    ],
    "source": [
-    "df.tail(20)"
+    "# df.tail(20)"
    ]
   },
   {
