--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Stuff"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -50,8 +57,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set Time Resolution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-24T18:19:26.334691Z",
@@ -62,24 +76,31 @@
     {
      "data": {
       "text/plain": [
-       "'5m'"
+       "'1m'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# time_resolution = TimeResolution.FIFTEEN_SECONDS\n",
-    "time_resolution = TimeResolution.FIVE_MINUTES\n",
+    "time_resolution = TimeResolution.ONE_MINUTE\n",
     "directory_path = time_resolution.value\n",
     "directory_path"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download Raw Data from FTX"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-24T20:28:51.766398Z",
@@ -93,7 +114,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -107,8 +128,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [01:13<00:00,  1.95it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [05:19<00:00,  2.25it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -122,8 +143,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [01:07<00:00,  2.12it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [05:02<00:00,  2.38it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -137,8 +158,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:33<00:00,  4.26it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [02:48<00:00,  4.27it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -152,8 +173,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:40<00:00,  3.54it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [03:16<00:00,  3.66it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -167,8 +188,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:37<00:00,  3.79it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [02:54<00:00,  4.12it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -182,8 +203,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:41<00:00,  3.49it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [03:17<00:00,  3.65it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -197,8 +218,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:44<00:00,  3.25it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [03:09<00:00,  3.80it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -212,8 +233,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:47<00:00,  3.05it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [03:41<00:00,  3.24it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -227,8 +248,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:38<00:00,  3.72it/s]\n",
-      "  0%|          | 0/144 [00:00<?, ?it/s]"
+      "100%|██████████| 720/720 [02:51<00:00,  4.21it/s]\n",
+      "  0%|          | 0/720 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -242,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 144/144 [00:39<00:00,  3.68it/s]\n"
+      "100%|██████████| 720/720 [02:56<00:00,  4.08it/s]\n"
      ]
     }
    ],
@@ -263,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-19T23:28:51.698630Z",
@@ -276,8 +297,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convert To Dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:38:54.297336Z",
@@ -292,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T21:43:59.857575Z",
@@ -306,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T21:44:04.274595Z",
@@ -317,10 +345,10 @@
     {
      "data": {
       "text/plain": [
-       "126060"
+       "630547"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,8 +358,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Pandas Dataframes as Parquet"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:46:16.410658Z",
@@ -344,8 +379,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute Descriptive Information"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:38:04.511971Z",
@@ -359,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:36:50.763262Z",
@@ -373,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:32:04.944158Z",
@@ -387,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:32:05.670486Z",
@@ -401,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:53:02.540968Z",
@@ -417,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-20T00:53:03.230981Z",
@@ -428,10 +470,10 @@
     {
      "data": {
       "text/plain": [
-       "437.70833333333337"
+       "437.8798611111111"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
