- moved modules into new packages

--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-24T18:19:23.883750Z",
-     "start_time": "2020-11-24T18:19:23.863797Z"
+     "end_time": "2021-01-16T04:22:17.918676Z",
+     "start_time": "2021-01-16T04:22:17.889879Z"
     }
    },
    "outputs": [],
@@ -24,36 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-24T20:28:51.768805Z",
-     "start_time": "2020-11-24T18:20:38.446Z"
+     "end_time": "2021-01-16T04:22:46.351689Z",
+     "start_time": "2021-01-16T04:22:40.313387Z"
     }
    },
    "outputs": [],
    "source": [
-    "from ovm.utils import (\n",
-    "    TimeResolution, \n",
-    "    fetch_data\n",
-    ")\n",
+    "from datetime import datetime\n",
+    "import os\n",
+    "import typing as tp\n",
     "\n",
-    "from ovm.historical_data_io import (\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pyarrow\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "\n",
+    "from ovm.historical.utils import fetch_data\n",
+    "\n",
+    "from ovm.historical.data_io import (\n",
     "    convert_multiple_raw_price_histories_from_nested_lists_to_dict_of_dataframes, \n",
     "    convert_raw_price_history_from_nested_list_to_dataframe, \n",
     "    compute_number_of_days_in_price_history, \n",
     "    save_price_histories    \n",
     ")\n",
     "\n",
-    "from datetime import datetime\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import pyarrow\n",
-    "import statsmodels.api as sm\n",
-    "from statsmodels.tsa.stattools import adfuller\n",
-    "import typing as tp"
+    "from ovm.utils import TimeResolution"
    ]
   },
   {
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-11-24T18:19:26.334691Z",
-     "start_time": "2020-11-24T18:19:26.301705Z"
+     "end_time": "2021-01-16T04:22:46.396892Z",
+     "start_time": "2021-01-16T04:22:46.354337Z"
     }
    },
    "outputs": [
@@ -79,7 +79,7 @@
        "'1m'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
