- used paths.py in Jupyter notebooks

--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-16T04:22:17.918676Z",
-     "start_time": "2021-01-16T04:22:17.889879Z"
+     "end_time": "2021-01-16T05:02:16.402566Z",
+     "start_time": "2021-01-16T05:02:16.382637Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-16T04:22:46.351689Z",
-     "start_time": "2021-01-16T04:22:40.313387Z"
+     "end_time": "2021-01-16T05:02:39.106594Z",
+     "start_time": "2021-01-16T05:02:37.549293Z"
     }
    },
    "outputs": [],
@@ -53,6 +53,7 @@
     "    save_price_histories    \n",
     ")\n",
     "\n",
+    "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
     "from ovm.utils import TimeResolution"
    ]
   },
@@ -65,21 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-16T04:22:46.396892Z",
-     "start_time": "2021-01-16T04:22:46.354337Z"
+     "end_time": "2021-01-16T05:02:56.226323Z",
+     "start_time": "2021-01-16T05:02:56.184465Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1m'"
+       "'/Volumes/GIT/PycharmProjects/overlay-monetary/notebooks/1m'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,8 @@
    "source": [
     "# time_resolution = TimeResolution.FIFTEEN_SECONDS\n",
     "time_resolution = TimeResolution.ONE_MINUTE\n",
-    "directory_path = time_resolution.value\n",
+    "# directory_path = time_resolution.value\n",
+    "directory_path = os.path.join(HISTORICAL_DATA_DIRECTORY, time_resolution.value)\n",
     "directory_path"
    ]
   },
