- continued performance analysis:  - considerable runtime is spent in printing to console -> replaced with logging that can be turned off in run.py  -  significant amount of time is spent during data collection -> can be turned off via the MonetaryModel init argument collect_data (on by default)  - running the time-steps manually without logging and data collection results in a 10x speed increase

--- a/notebooks/Data Import.ipynb
+++ b/notebooks/Data Import.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-16T18:11:05.284695Z",
-     "start_time": "2021-01-16T18:11:05.263736Z"
+     "end_time": "2021-01-17T20:40:25.759218Z",
+     "start_time": "2021-01-17T20:40:25.738971Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-16T18:11:07.760320Z",
-     "start_time": "2021-01-16T18:11:05.709898Z"
+     "end_time": "2021-01-17T20:40:30.992603Z",
+     "start_time": "2021-01-17T20:40:25.889521Z"
     }
    },
    "outputs": [],
@@ -54,7 +54,7 @@
     ")\n",
     "\n",
     "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
-    "from ovm.utils import TimeResolution"
+    "from ovm.time_resolution import TimeResolution"
    ]
   },
   {
@@ -69,8 +69,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-16T18:11:07.818713Z",
-     "start_time": "2021-01-16T18:11:07.763571Z"
+     "end_time": "2021-01-17T20:40:31.030960Z",
+     "start_time": "2021-01-17T20:40:30.994588Z"
     }
    },
    "outputs": [
