--- a/notebooks/Optimal Block Length Selection and Multivariate Return Simulation.ipynb
+++ b/notebooks/Optimal Block Length Selection and Multivariate Return Simulation.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
     "\n",
-    "from ovm.utils import TimeResolution"
+    "from ovm.time_resolution import TimeResolution"
    ]
   },
   {
