--- a/notebooks/GARCH Estimation and Simulation.ipynb
+++ b/notebooks/GARCH Estimation and Simulation.ipynb
@@ -63,7 +63,7 @@
     ")\n",
     "\n",
     "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
-    "from ovm.utils import TimeResolution"
+    "from ovm.time_resolution import TimeResolution"
    ]
   },
   {
