--- a/notebooks/Return Estimation.ipynb
+++ b/notebooks/Return Estimation.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "from ovm.paths import HISTORICAL_DATA_DIRECTORY\n",
     "\n",
-    "from ovm.utils import TimeResolution"
+    "from ovm.time_resolution import TimeResolution"
    ]
   },
   {
