- removed debug format strings - expanded performance analysis

--- a/notebooks/Agent Based Simulation Performance Analysis.ipynb
+++ b/notebooks/Agent Based Simulation Performance Analysis.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:27.693866Z",
-     "start_time": "2021-01-17T20:55:27.675283Z"
+     "end_time": "2021-01-17T21:50:13.733374Z",
+     "start_time": "2021-01-17T21:50:13.716073Z"
     }
    },
    "outputs": [],
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.080012Z",
-     "start_time": "2021-01-17T20:55:27.695727Z"
+     "end_time": "2021-01-17T21:50:14.110681Z",
+     "start_time": "2021-01-17T21:50:13.734967Z"
     }
    },
    "outputs": [],
@@ -45,7 +45,12 @@
     "from mesa.visualization.modules import ChartModule\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from ovm.monetary.agents import MonetaryArbitrageur\n",
+    "from ovm.monetary.agents import (\n",
+    "    MonetaryAgent, \n",
+    "    MonetaryArbitrageur, \n",
+    "    MonetaryKeeper\n",
+    ")\n",
+    "\n",
     "from ovm.monetary.markets import MonetaryFMarket\n",
     "from ovm.monetary.model import MonetaryModel\n",
     "from ovm.monetary.data_io import construct_ticker_to_series_of_prices_map\n",
@@ -65,8 +70,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.101340Z",
-     "start_time": "2021-01-17T20:55:28.082101Z"
+     "end_time": "2021-01-17T21:50:14.133664Z",
+     "start_time": "2021-01-17T21:50:14.114866Z"
     }
    },
    "outputs": [],
@@ -79,8 +84,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.129879Z",
-     "start_time": "2021-01-17T20:55:28.103658Z"
+     "end_time": "2021-01-17T21:50:14.161110Z",
+     "start_time": "2021-01-17T21:50:14.135491Z"
     }
    },
    "outputs": [
@@ -104,8 +109,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.153205Z",
-     "start_time": "2021-01-17T20:55:28.131391Z"
+     "end_time": "2021-01-17T21:50:14.183774Z",
+     "start_time": "2021-01-17T21:50:14.162889Z"
     }
    },
    "outputs": [
@@ -129,8 +134,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.176948Z",
-     "start_time": "2021-01-17T20:55:28.154766Z"
+     "end_time": "2021-01-17T21:50:14.206033Z",
+     "start_time": "2021-01-17T21:50:14.185455Z"
     }
    },
    "outputs": [
@@ -154,8 +159,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.201434Z",
-     "start_time": "2021-01-17T20:55:28.178440Z"
+     "end_time": "2021-01-17T21:50:14.230760Z",
+     "start_time": "2021-01-17T21:50:14.209619Z"
     }
    },
    "outputs": [],
@@ -175,13 +180,13 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.226448Z",
-     "start_time": "2021-01-17T20:55:28.204511Z"
+     "end_time": "2021-01-17T21:50:14.254966Z",
+     "start_time": "2021-01-17T21:50:14.233245Z"
     }
    },
    "outputs": [],
    "source": [
-    "number_of_steps_to_simulate = 100\n",
+    "number_of_steps_to_simulate = 10000\n",
     "\n",
     "TIME_RESOLUTION = TimeResolution.FIFTEEN_SECONDS\n",
     "DATA_SIM_RNG = 42\n",
@@ -208,8 +213,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.764397Z",
-     "start_time": "2021-01-17T20:55:28.228936Z"
+     "end_time": "2021-01-17T21:50:14.760079Z",
+     "start_time": "2021-01-17T21:50:14.256642Z"
     }
    },
    "outputs": [],
@@ -225,24 +230,11 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:28.927563Z",
-     "start_time": "2021-01-17T20:55:28.766059Z"
+     "end_time": "2021-01-17T21:50:14.929108Z",
+     "start_time": "2021-01-17T21:50:14.761647Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model kwargs for initial conditions of sim:\n",
-      "num_arbitrageurs = 100\n",
-      "num_keepers = 50\n",
-      "num_traders = 2000\n",
-      "num_holders = 5000\n",
-      "base_wealth = 10.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# \"\"\"\n",
     "# Configure visualization elements and instantiate a server\n",
@@ -299,14 +291,6 @@
     "    \"sampling_interval\": sampling_interval,\n",
     "}\n",
     "\n",
-    "\n",
-    "print(\"Model kwargs for initial conditions of sim:\")\n",
-    "print(f\"num_arbitrageurs = {MODEL_KWARGS['num_arbitrageurs']}\")\n",
-    "print(f\"num_keepers = {MODEL_KWARGS['num_keepers']}\")\n",
-    "print(f\"num_traders = {MODEL_KWARGS['num_traders']}\")\n",
-    "print(f\"num_holders = {MODEL_KWARGS['num_holders']}\")\n",
-    "print(f\"base_wealth = {MODEL_KWARGS['base_wealth']}\")\n",
-    "\n",
     "monetary_model = \\\n",
     "    MonetaryModel(num_arbitrageurs=num_arbitrageurs, \n",
     "                  num_keepers=num_keepers, \n",
@@ -325,11 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:29.630041Z",
-     "start_time": "2021-01-17T20:55:28.929350Z"
+     "end_time": "2021-01-17T21:59:02.819166Z",
+     "start_time": "2021-01-17T21:58:03.519301Z"
     }
    },
    "outputs": [],
@@ -343,8 +327,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:29.653348Z",
-     "start_time": "2021-01-17T20:55:29.632092Z"
+     "end_time": "2021-01-17T21:51:18.829665Z",
+     "start_time": "2021-01-17T21:51:18.811975Z"
     }
    },
    "outputs": [],
@@ -359,16 +343,20 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-17T20:55:32.192318Z",
-     "start_time": "2021-01-17T20:55:29.655882Z"
+     "end_time": "2021-01-17T21:56:45.158772Z",
+     "start_time": "2021-01-17T21:51:18.831145Z"
     }
    },
    "outputs": [],
    "source": [
     "%lprun \\\n",
+    "    -f MonetaryAgent.step \\\n",
     "    -f MonetaryArbitrageur._unwind_positions \\\n",
     "    -f MonetaryArbitrageur._unwind_next_position \\\n",
     "    -f MonetaryArbitrageur.trade \\\n",
+    "    -f MonetaryArbitrageur.step \\\n",
+    "    -f MonetaryKeeper.step \\\n",
+    "    -f MonetaryKeeper.distribute_funding \\\n",
     "    -f MonetaryFMarket.build \\\n",
     "    -f MonetaryFMarket.unwind \\\n",
     "    -f MonetaryFMarket._swap \\\n",
